# Fresharr

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
fresharr/: __main__.py  config.py  models.py  options.py  runner.py  scheduler.py  settings.py  state.py  status.py  util.py  web.py
fresharr/arr/: base.py  radarr.py  sonarr.py
fresharr/sources/: __init__.py  anilist.py  imdb.py  letterboxd.py  metacritic.py  myanimelist.py  rottentomatoes.py  tmdb.py  trakt.py
tests/: test_anilist.py  test_config.py  test_imdb.py  test_letterboxd.py  test_matching.py  test_metacritic.py  test_myanimelist.py  test_radarr.py  test_rottentomatoes.py  test_runner.py  test_scheduler.py  test_settings.py  test_sonarr.py  test_state.py  test_tmdb.py  test_trakt.py  test_web.py
unraid/: fresharr.xml
