[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fresharr"
version = "0.0.5"
description = "Discovers new and highly rated movies & TV shows (Rotten Tomatoes, TMDB) and adds them to Radarr/Sonarr"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "flask>=3.0",
    "waitress>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
fresharr = "fresharr.__main__:main"

[tool.setuptools.packages.find]
include = ["fresharr*"]
